--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,14 +2,28 @@ name: Update README with Stats
 
 on:
   schedule:
-    - cron: "0 */12 * * *"  # Atualiza a cada 12h
-  workflow_dispatch:        # Permite rodar manualmente
+    - cron: '0 6 * * *' # Atualiza todo dia às 6h
+  workflow_dispatch: # Permite rodar manualmente
 
 jobs:
-  build:
+  update-readme:
     runs-on: ubuntu-latest
     steps:
-      - name: Atualizar README com commits privados
-        uses: anuraghazra/github-readme-stats@master
+      - name: Checkout repositório
+        uses: actions/checkout@v3
+
+      - name: Gerar GitHub Stats com commits privados
+        run: |
+          curl -o stats.svg "https://github-readme-stats.vercel.app/api?username=IcaroVazz&show_icons=true&theme=tokyonight&count_private=true&include_all_commits=true"
+          curl -o streak.svg "https://streak-stats.demolab.com?user=IcaroVazz&theme=tokyonight&hide_border=true"
+          curl -o langs.svg "https://github-readme-stats.vercel.app/api/top-langs/?username=IcaroVazz&layout=compact&langs_count=8&theme=tokyonight"
+
+      - name: Atualizar README
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "Atualizar stats automaticamente" || echo "Nada para atualizar"
+          git push
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
